# cs591_templatedb

./: 0016  0018  CMakeLists.txt  README.md  reset.sh  test  test_temp.bpt
1/: 0.bpt  0.data  0056  0058  0062  0064  0066  0068  0072  0074  01254.bpt  01256.bpt  01258.bpt  01260.bpt  01262.bpt  01264.bpt  01266.bpt  01268.bpt  01272.bpt  01274.bpt  01276.bpt  01278.bpt  01280.bpt  01282.bpt  01284.bpt  01286.bpt
2/: 0.bpt  0.data  01156.bpt  01158.bpt  01160.bpt  01162.bpt  01164.bpt  01166.bpt  01168.bpt  01170.bpt  01174.bpt  01176.bpt  01178.bpt  01180.bpt  01182.bpt  01184.bpt  01186.bpt  01188.bpt  01190.bpt  01192.bpt  01194.bpt  01196.bpt  01198.bpt
3/: 0.bpt  0.data  00926.bpt  00928.bpt  00930.bpt  00932.bpt  00934.bpt  00936.bpt  00938.bpt  00940.bpt  00942.bpt  00944.bpt  00946.bpt  00948.bpt  00950.bpt  00952.bpt  00954.bpt  00956.bpt  00958.bpt  00960.bpt  00962.bpt  00964.bpt  00966.bpt  00968.bpt  00970.bpt  00972.bpt  00974.bpt  00976.bpt  00980.bpt  00982.bpt  00984.bpt  00986.bpt  00988.bpt  00990.bpt  00992.bpt  00994.bpt  00996.bpt  00998.bpt  01000.bpt  01002.bpt  (+3 more)
all-result/: analyze.py
examples/: CMakeLists.txt  simple_benchmark.cpp
result/: PutAndGetFunctionality2OnDiskLvling  PutAndGetFunctionality2OnDiskTiering  PutAndGetFunctionality3OnDiskLvling  PutAndGetFunctionality3OnDiskTiering  PutAndGetFunctionality4OnDiskLvling  PutAndGetFunctionality4OnDiskTiering  PutAndGetFunctionalityInMemory  PutAndGetFunctionalityOnDiskLvling  PutAndGetFunctionalityOnDiskTiering
tests/: CMakeLists.txt  basic_test.cpp
tree-test/: 00006.bpt  00008.bpt  (+19 more)
(+33 files in other folders)
